# LLCompiler

./: .clangd  .clangd_off  .gitignore  .gitmodules  15_tosa-to-arith.mlir  CMakeLists.txt  CmakeLists.txt  build_macro.h.in  check_code.py  command.sh  command.txt  export_onnx_models.py  fx_test.py  linalg_before.mlir  llcompiler.py  llvm-to-mlir.mlir  llvmir.bc  llvmir.ll  llvmir.mlir  llvmir.s  log.mlir  main.cpp  main.py  memo.txt  mlir-opt  onnx_export.py  opt_out.mlir  out.mlir  pipeline.txt  readme.md  report_dynamo_export.sarif  requirements.txt  setup.cfg  setup.cfg.in  setup.py  symengine_test.py  test.py  torch.py  tosa.mlir  toy  (+2 more)
include/llcompiler/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/llcompiler/Conversion/LLHToArith/: LLHToArith.h
include/llcompiler/Conversion/LLHToFunc/: LLHToFunc.h
include/llcompiler/Conversion/LLHToHLO/: LLHPreprocessingForHLO.h  LLHToHLO.h
include/llcompiler/Conversion/LLHToLinalg/: LLHToLinalg.h
include/llcompiler/Conversion/LLHToMath/: LLHToMath.h
include/llcompiler/Conversion/LLHToShape/: LLHToShape.h
include/llcompiler/Conversion/LLHToTensor/: CMakeLists.txt  LLHToTensor.h
include/llcompiler/Conversion/LLHToTosa/: CMakeLists.txt  LLHToTosa.h  LLHToTosa.td
include/llcompiler/Conversion/StablehlotoLinalgExtension/: StablehlotoLinalgExtension.h
include/llcompiler/Conversion/TosaToLinalgExtension/: TosaToLinalgExtension.h
include/llcompiler/TransformLibrary/: CMakeLists.txt  LibraryConfig.h  LibraryConfig.h.in  LibraryConfig.install.h  LibraryConfig.install.h.in  LibraryEntry.h  LibraryEntry.h.in  LibraryPath.h  LibraryPath.h.in  LibraryPath.install.h  LibraryPath.install.h.in  linalg_include.mlir  llh_optimization.mlir  llvm_include.mlir  memref_include.mlir  mhlo_include.mlir  scf_include.mlir  tensor_include.mlir
src/: CMakeLists.txt  core.cpp
src/Compiler/: CMakeLists.txt  Command.cpp  CompileOptions.cpp  Compiler.cpp  Engine.cpp  Entrance.cpp  Execution.cpp  Init.cpp  Tensor.cpp  Utility.cpp
src/Conversion/: CMakeLists.txt
src/Conversion/LLHToArith/: CMakeLists.txt  LLHToArith.cpp
src/Conversion/LLHToFunc/: CMakeLists.txt  LLHToFunc.cpp
src/Conversion/LLHToHLO/: CMakeLists.txt  LLHPreprocessingForHLO.cpp  LLHToHLO.cpp  LLHToHLO.td  LLHToMHLO.cpp
src/Conversion/LLHToLinalg/: CMakeLists.txt  LLHToLinalg.cpp
src/Conversion/LLHToMath/: CMakeLists.txt  LLHToMath.cpp
src/Conversion/LLHToShape/: CMakeLists.txt  LLHToShape.cpp
src/Conversion/LLHToTensor/: CMakeLists.txt  LLHToTensor.cpp
src/Conversion/LLHToTosa/: CMakeLists.txt  LLHToTosa.cpp
src/Conversion/StablehlotoLinalgExtension/: CMakeLists.txt  StablehlotoLinalgExtension.cpp
src/Conversion/TosaToLinalgExtension/: CMakeLists.txt  TosaToLinalgExtension.cpp
src/Dialect/: CMakeLists.txt
src/Dialect/BufferizationExtension/Transforms/: AllocToArg.cpp  CMakeLists.txt
src/Dialect/IRExtension/IR/: Attrs.cpp  CMakeLists.txt  Dialect.cpp  Enums.cpp  (+2 more)
src/Dialect/LLH/: CMakeLists.txt
src/Dialect/Utility/: Attribute.cpp  Benefit.cpp  Builder.cpp  CMakeLists.txt  File.cpp  RewritePattern.cpp  Tool.cpp  Type.cpp  type.cpp
src/Frontend/: CMakeLists.txt
src/Frontend/Core/: Base.cpp  Builder.cpp  CMakeLists.txt  Importer.cpp  Option.cpp  Utility.cpp
src/Frontend/Onnx/: CMakeLists.txt  OnnxBuilder.cpp  OnnxImport.cpp
src/IRExtension/: CMakeLists.txt  Encoding.cpp
src/Importer/: CMakeLists.txt  Importer.cpp  LLHOpBuilder.cpp  OnnxImport.cpp  OpBuilder.cpp  Opbuilder.cpp  Utility.cpp
src/Interfaces/: BraodcastableOpInterfaces.cpp  CMakeLists.txt  SymbolShapeOpInterfaces.cpp
src/Pipeline/: BasicPipeline.cpp  CMakeLists.txt  CommonPipeline.cpp  Enums.cpp  TransformPipeline.cpp
src/Pybind/: CMakeLists.txt  Entrance.cpp
src/Support/: CMakeLists.txt  Core.cpp  Enums.cpp  Logger.cpp  Option.cpp
src/compiler/: init.cpp  option.cpp
src/importer/: CMakeLists.txt  Utility.cpp  importer.cpp
src/support/: core.cpp  logger.cpp  option.cpp
src/utils/: logger.cpp  option.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test.mlir
test/Conversion/: llh_to_tosa.mlir
test/Conversion/LLHToArith/: llh_to_arith.mlir
test/Conversion/LLHToHLO/: llh_to_hlo.mlir  preprocessing_llh_to_hlo.mlir
test/Conversion/LLHToLinalg/: llh_to_linalg.mlir
test/Conversion/LLHToMath/: llh_to_math.mlir
test/Conversion/LLHToShape/: llh_to_shape.mlir
test/Conversion/LLHToTensor/: llh_to_tensor.mlir
test/Conversion/LLHToTosa/: llh_to_tosa.mlir
test/Conversion/StablehlotoLinalgExtension/: stablehlo_to_linalg_extension.mlir
test/Dialect/BufferizationExtension/: alloc_to_arg.mlir
test/Dialect/IndexExtension/: foldcast.mlir
test/Dialect/LLH/: canonicalize.mlir  canonicalize_symbol.mlir  decompose_ops.mlir  extra_symbol_infer_shape.mlir  fold.mlir  infer_symbol_shape.mlir  infer_symbol_shape_old.mlir  insert_braodcast.mlir  layout_canonicalize.mlir  one-shot-bufferize.mlir  operation-legalization.mlir  ops.mlir  remove_redundant_ops.mlir  reshape_before_braodcast.mlir  symbol-canonicalization.mlir  transform-layout.mlir  transform_layout.mlir  transform_layout_to_nhwc.mlir  unload_and_bind_encoding.mlir  valid.mlir
test/Dialect/LLVMExtension/: adapt_entry_parms_for_engine.mlir
test/RunnerCheck/: cccc.mlir
test/RunnerTest/: abs.mlir  mlir-runner.mlir
test/model_ir/: Add.mlir  Base.mlir  Base_Net.mlir  mnist-12.mlir  resnet18.mlir  test.mlir
test/python/: CMakeLists.txt  lit.cfg.py
test/python/ops/: abs.py  add.py  batch_matmul.py  batch_norm_1d_inference.py  batch_norm_2d_inference.py  broadcast.py  conv2d_nchw_fchw.py  conv_nchw_fchw.py  div.py  extract.py  linear.py  matmul.py  max_pool_2d.py  mul.py  reduce_max.py  reduce_sum.py  relu.py  sqrt.py  sub.py  unsqueeze.py  where.py
tools/: CMakeLists.txt  compiler.cpp  llcompiler.cpp  onnx-to-mlir.cpp  onnx2llh.cpp
tools/compiler/: CMakeLists.txt  compiler.cpp
tools/llc-opt/: CMakeLists.txt  llc-opt.cpp
tools/llc-translate/: CMakeLists.txt  llc-translate.cpp
tools/llcompiler/: CMakeLists.txt  llcompiler.cpp
tools/onnx-to-mlir/: CMakeLists.txt  onnx-to-mlir.cpp
(+792 files in other folders)
