[metadata]
name = llcompiler
version = "0.0.1"
author='Lfr'
author_email='1733535832@qq.com'
description='llcompiler'
url='https://github.com/violetDelia/LLCompiler'
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development :: Compilers

[options]
install_requires=
   xdsl>=0.22.0
   onnx>=1.16.2
   setuptools>=75.1.0
   pybind11>=2.10.3
   torch>=2.4.1

packages = find:
