add_subdirectory(support)
add_subdirectory(importer)
add_subdirectory(dialect)
add_subdirectory(compiler)
set(LLCompilerALL_LINK_LIBS
    LLCompilerSupport
    LLCompilerImporter
    LLCompiler
    LLCLLHDialect
    LLCLLHPasses
)
llcompiler_add_library(LLCompilerAll
    LLCompilerALL_LINK_LIBS
    LLCOMPILER_CURRENT_DIR_FILES
)
