add_subdirectory(Support)
add_subdirectory(Importer)
add_subdirectory(Dialect)
add_subdirectory(Compiler)
set(LLCompilerALL_LINK_LIBS
    LLCompilerSupport
    LLCompilerImporter
    LLCompiler
    LLCLLHDialect
    LLCLLHPasses
)
llcompiler_add_library(LLCompilerAll
    LLCompilerALL_LINK_LIBS
    LLCOMPILER_CURRENT_DIR_FILES
)
